fix score visibile for previous weeks and add redirects

--- a/src/components/UserResults/UserResults.scss
+++ b/src/components/UserResults/UserResults.scss
@@ -12,12 +12,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: green;
     border-radius: 20px;
     padding: 0.5rem;
 
+    &--won {
+      border: 3px solid green;
+    }
+
     &--eliminated {
-      background-color: red;
+      border: 3px solid red;
     }
   }
 
