--- a/src/pages/LeagueStandings/LeagueStandings.scss
+++ b/src/pages/LeagueStandings/LeagueStandings.scss
@@ -49,7 +49,6 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 0 1rem;
 
   &__item {
     display: flex;
@@ -66,10 +65,10 @@
     justify-content: center;
     padding: 0 1rem;
     gap: 0.5rem;
-    margin: 1rem;
+    margin: 1rem 0;
   }
   &__icon {
     width: 1rem;
-    height: 1rem;
+    height: 0.8rem;
   }
 }
